style(ProjectsSection): Set base max-width of .thumb-boardspace to 100% to prevent overflow

--- a/src/scss/index/_ProjectsSection.scss
+++ b/src/scss/index/_ProjectsSection.scss
@@ -200,6 +200,7 @@
 
 .thumb-boardspace {
 	width: 90%;
+	max-width: 100%;
 }
 
 //
@@ -341,7 +342,6 @@
 
 	.thumb-boardspace {
 		width: auto;
-		max-width: fit-content;
 	}
 
 	.project-details-container {
